--- a/book-demo.html
+++ b/book-demo.html
@@ -50,14 +50,11 @@
         <p class="text-lg text-gray-700 text-center mb-10 max-w-2xl mx-auto">Schedule a personalized demo to see how DocMersion can transform your documents into accessible, searchable web experiences.</p>
         
         <!-- Demo Container -->
-        <div class="group relative">
-          <div class="absolute -inset-4 bg-gradient-to-r from-blue-500 to-purple-600 rounded-3xl opacity-20 group-hover:opacity-30 transition-opacity blur-xl"></div>
-          <div class="relative bg-white rounded-2xl shadow-2xl p-4 border border-gray-100 overflow-hidden">
-            <!-- Calendly inline widget begin -->
-            <div class="calendly-inline-widget" data-url="https://calendly.com/mark-100/45min" style="min-width:100%;width:100%;height:1200px;"></div>
-            <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-            <!-- Calendly inline widget end -->
-          </div>
+        <div>
+          <!-- Calendly inline widget begin -->
+          <div class="calendly-inline-widget" data-url="https://calendly.com/mark-100/45min" style="min-width:100%;width:100%;height:1200px;"></div>
+          <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+          <!-- Calendly inline widget end -->
         </div>
       </div>
     </main>
