--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
   <body class="bg-white text-gray-900">
     <!-- Navbar will be loaded by navbarloader.js -->
     <div id="navbar-container"></div>
+    <div style="display:none">Test note for non-functional verification.</div>
     <script>
 // Initialize HLS video players
 document.addEventListener('DOMContentLoaded', function() {
+  console.log('test worked');
   // Hero video
   const heroVideo = document.getElementById('hero-video');
   const playButton = document.getElementById('play-button');
