fixing many broken links

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-        <!-- BEGIN DOCMERSION FAVICONS -->
+        <!-- BEGIN BOARDBLOCS FAVICONS -->
         <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
@@ -9,11 +9,11 @@
         <link rel="icon" type="image/png" sizes="512x512" href="/favicon/android-chrome-512x512.png">
         <link rel="manifest" href="/favicon/site.webmanifest">
         <link rel="shortcut icon" href="/favicon/favicon.ico">
-        <!-- END DOCMERSION FAVICONS -->
+        <!-- END BOARDBLOCS FAVICONS -->
          
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Privacy Policy – DocMersion</title>
+    <title>Privacy Policy – BoardBlocs</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
