all edits requested

--- a/meetings-and-agenda.html
+++ b/meetings-and-agenda.html
@@ -420,14 +420,14 @@
           </div>
           
           <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
-            <!-- Meeting Packets -->
+            <!-- Meeting Preparation -->
             <div class="bg-gradient-to-br from-orange-500 to-amber-600 rounded-3xl p-8 text-white">
               <div class="w-14 h-14 bg-white/20 rounded-2xl flex items-center justify-center mb-6">
-                <i class="bi bi-file-earmark-zip text-3xl"></i>
+                <i class="bi bi-clipboard-check text-3xl"></i>
               </div>
-              <h3 class="text-2xl font-bold mb-4">Meeting Packets</h3>
+              <h3 class="text-2xl font-bold mb-4">Meeting Preparation</h3>
               <p class="text-orange-100 leading-relaxed">
-                Compile agendas, supporting documents, and reports into a single board packet. Keep everything organized and easy to access for board members.
+                Give board members everything they need before the meeting—agendas, background materials, and key documents—all accessible in one place.
               </p>
             </div>
             
