--- a/mobileapp.html
+++ b/mobileapp.html
@@ -621,13 +621,10 @@
             Give your board members the freedom to stay connected from anywhere. Mobile access and smart notifications keep everyone in the loop.
           </p>
           
-          <div class="flex flex-col sm:flex-row gap-4 justify-center">
+          <div class="flex justify-center">
             <a href="book-demo.html" class="inline-flex items-center justify-center gap-3 px-10 py-5 bg-white text-indigo-600 font-bold rounded-2xl shadow-xl hover:shadow-2xl transition-all duration-300 hover:scale-105 text-lg">
               <span>Book a Demo</span>
               <i class="bi bi-arrow-right"></i>
-            </a>
-            <a href="discussions.html" class="inline-flex items-center justify-center gap-3 px-10 py-5 bg-white/20 text-white font-bold rounded-2xl border border-white/30 hover:bg-white/30 transition-all duration-300 text-lg">
-              <span>Explore Discussions</span>
             </a>
           </div>
         </div>
