new hero images for all product sections

--- a/mobileapp.html
+++ b/mobileapp.html
@@ -71,11 +71,11 @@
           </div>
         </div>
         
-        <div class="flex-1 flex justify-center items-center lg:basis-7/12 lg:max-w-[55%] w-full order-2 lg:order-2">
-          <div class="w-full max-w-md px-4">
+        <div class="flex-1 flex justify-center items-center lg:basis-7/12 w-full order-2 lg:order-2">
+          <div class="w-full max-w-3xl px-4">
             <img 
-              src="logo.png" 
-              alt="Boardblocs Logo" 
+              src="images/mobile-apps-and-notifications-image.png" 
+              alt="Mobile Apps and Notifications" 
               class="w-full h-auto"
             />
           </div>
