--- a/discussions.html
+++ b/discussions.html
@@ -71,12 +71,12 @@
           </div>
         </div>
         
-        <div class="flex-1 flex justify-center items-center lg:basis-7/12 lg:max-w-[55%] w-full order-2 lg:order-2">
-          <div class="w-full max-w-md px-4">
+        <div class="flex-1 flex justify-center items-center lg:basis-7/12 w-full order-2 lg:order-2">
+          <div class="w-full max-w-2xl px-4">
             <img 
-              src="logo.png" 
-              alt="Boardblocs Logo" 
-              class="w-full h-auto"
+              src="images/avatarbased-discussions.png" 
+              alt="Discussions" 
+              class="w-full h-auto -scale-x-100"
             />
           </div>
         </div>
