--- a/meetings-and-agenda.html
+++ b/meetings-and-agenda.html
@@ -72,10 +72,10 @@
         </div>
         
         <div class="flex-1 flex justify-center items-center lg:basis-7/12 lg:max-w-[55%] w-full order-2 lg:order-2">
-          <div class="w-full max-w-md px-4">
+          <div class="w-full max-w-2xl px-4">
             <img 
-              src="logo.png" 
-              alt="Boardblocs Logo" 
+              src="images/meetings-and-agenda.png" 
+              alt="Meetings and Agenda" 
               class="w-full h-auto"
             />
           </div>
