--- a/agenda-resources.html
+++ b/agenda-resources.html
@@ -431,12 +431,8 @@ document.addEventListener('DOMContentLoaded', function() {
         </div>
         
         <div class="flex-1 flex justify-center items-center lg:basis-7/12 lg:max-w-[55%] w-full order-2 lg:order-2">
-          <div class="w-full max-w-md px-4">
-            <img 
-              src="logo.png" 
-              alt="Boardblocs Logo" 
-              class="w-full h-auto"
-            />
+          <div class="w-full max-w-md px-4 flex justify-center">
+            <i class="bi bi-journal-text text-blue-600" style="font-size: 12rem;"></i>
           </div>
         </div>
         
