--- a/case-studies.html
+++ b/case-studies.html
@@ -61,27 +61,8 @@
         </div>
         
         <div class="flex-1 flex justify-center items-center lg:basis-6/12 w-full order-2">
-          <div class="w-full max-w-md px-4">
-            <div class="rounded-3xl border border-slate-200 bg-white/80 shadow-lg p-6 flex flex-col gap-3">
-              <div class="inline-flex items-center gap-2 text-xs font-semibold text-slate-500 uppercase tracking-wide">
-                <i class="bi bi-building"></i>
-                <span>Sample outcomes</span>
-              </div>
-              <div class="space-y-2 text-sm text-slate-700">
-                <div class="flex items-start gap-2">
-                  <i class="bi bi-check-circle text-emerald-500 mt-0.5"></i>
-                  <p>One place for meetings, policies, and live streams the public can actually find.</p>
-                </div>
-                <div class="flex items-start gap-2">
-                  <i class="bi bi-check-circle text-emerald-500 mt-0.5"></i>
-                  <p>Private workspaces for committees that keep drafts and discussion out of email.</p>
-                </div>
-                <div class="flex items-start gap-2">
-                  <i class="bi bi-check-circle text-emerald-500 mt-0.5"></i>
-                  <p>Accessible, mobile-ready policy libraries powered by DocMersion-style pages.</p>
-                </div>
-              </div>
-            </div>
+          <div class="w-full max-w-md px-4 flex justify-center">
+            <i class="bi bi-file-earmark-bar-graph text-blue-600" style="font-size: 12rem;"></i>
           </div>
         </div>
       </div>
