--- a/book-demo.html
+++ b/book-demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-        <!-- BEGIN DOCMERSION FAVICONS -->
+        <!-- BEGIN BOARDBLOCS FAVICONS -->
         <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
@@ -9,10 +9,10 @@
         <link rel="icon" type="image/png" sizes="512x512" href="/favicon/android-chrome-512x512.png">
         <link rel="manifest" href="/favicon/site.webmanifest">
         <link rel="shortcut icon" href="/favicon/favicon.ico">
-        <!-- END DOCMERSION FAVICONS -->
+        <!-- END BOARDBLOCS FAVICONS -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book a Demo – DocMersion</title>
+    <title>Book a Demo – BoardBlocs</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -47,7 +47,7 @@
     <main class="pt-32 pb-20 min-h-[60vh] bg-gradient-to-br from-blue-50 via-purple-50 to-pink-50">
       <div class="container mx-auto px-4 max-w-5xl">
         <h1 class="text-4xl md:text-5xl font-extrabold mb-8 text-center">Book a <span style="color: #238CFF;">Demo</span></h1>
-        <p class="text-lg text-gray-700 text-center mb-10 max-w-2xl mx-auto">Schedule a personalized demo to see how DocMersion can transform your documents into accessible, searchable web experiences.</p>
+        <p class="text-lg text-gray-700 text-center mb-10 max-w-2xl mx-auto">Schedule a personalized demo to see how BoardBlocs can streamline your board management with meetings, documents, and collaboration all in one place.</p>
         
         <!-- Demo Container -->
         <div>
