--- a/about-us.html
+++ b/about-us.html
@@ -421,7 +421,7 @@ document.addEventListener('DOMContentLoaded', function() {
           </h1>
           
           <p class="hidden lg:block text-base md:text-lg text-slate-600 mb-8 leading-relaxed font-medium">
-            Were building modern board portal software for public-facing boards—combining a board website, private workspace, and accessible document center in one place.
+            We're building modern board portal software for public-facing boards—combining a board website, private workspace, and accessible document center in one place.
           </p>
           
           <!-- Book a Demo button - hidden on mobile, shown on desktop -->
