--- a/discussions.html
+++ b/discussions.html
@@ -625,8 +625,8 @@
               <span>Book a Demo</span>
               <i class="bi bi-arrow-right"></i>
             </a>
-            <a href="committees-&-groups.html" class="inline-flex items-center justify-center gap-3 px-10 py-5 bg-white/20 text-white font-bold rounded-2xl border border-white/30 hover:bg-white/30 transition-all duration-300 text-lg">
-              <span>Explore Committees</span>
+            <a href="pricing.html" class="inline-flex items-center justify-center gap-3 px-10 py-5 bg-white/20 text-white font-bold rounded-2xl border border-white/30 hover:bg-white/30 transition-all duration-300 text-lg">
+              <span>View Pricing</span>
             </a>
           </div>
         </div>
