--- a/meetings-and-agenda.html
+++ b/meetings-and-agenda.html
@@ -12,7 +12,7 @@
     <!-- END BOARDBLOCS FAVICONS -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meetings & Agendas – Complete Meeting Lifecycle | BoardBlocs</title>
+    <title>Meetings, Events, & Agendas – Complete Meeting Lifecycle | BoardBlocs</title>
     <meta name="description" content="Manage your entire meeting lifecycle in one place. Calendar, agendas, minutes, packets, livestreams, and public comments—all integrated.">
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -53,8 +53,8 @@
       <div class="container mx-auto flex flex-col lg:flex-row items-center justify-between gap-12 px-8 relative z-10">
         <div class="max-w-xl lg:text-left text-center lg:basis-5/12 lg:max-w-[45%] w-full order-1 lg:order-1">
           <h1 class="text-4xl md:text-6xl font-extrabold mb-6 leading-tight">
-            <span class="text-slate-900">Meetings &</span><br />
-            <span class="bg-gradient-to-r from-blue-600 to-indigo-700 bg-clip-text text-transparent">Agendas</span>
+            <span class="text-slate-900">Meetings, Events,</span><br />
+            <span class="bg-gradient-to-r from-blue-600 to-indigo-700 bg-clip-text text-transparent">& Agendas</span>
           </h1>
           
           <p class="hidden lg:block text-base md:text-lg text-slate-600 mb-8 leading-relaxed font-medium">
