--- a/contact-us.html
+++ b/contact-us.html
@@ -97,10 +97,10 @@
               <span>CONTACT BOARDBLOCS</span>
             </div>
             <h1 class="text-3xl md:text-4xl font-extrabold text-slate-900 mb-3">
-              Lets talk about your board portal
+              Get in Touch
             </h1>
             <p class="text-slate-700 text-sm md:text-base max-w-2xl mx-auto leading-relaxed">
-              Share a bit about your board, your current tools, and the kind of public site and private workspace you want. Well follow up with next steps&mdash;no pressure, no heavy sales.
+              Share a bit about your board, your current tools, and the kind of public site and private workspace you want. We’ll follow up with next steps—no pressure, no heavy sales.
             </p>
           </div>
         </div>
