google tag manager + major SEO update

--- a/about-us.html
+++ b/about-us.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-957201829"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-957201829');
+</script>
+
     <!-- BEGIN BOARDBLOCS FAVICONS -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -12,7 +22,29 @@
     <!-- END BOARDBLOCS FAVICONS -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Us – BoardBlocs</title>
+    <title>About Us – BoardBlocs | Modern Board Portal Software Team</title>
+    <meta name="description" content="Learn about BoardBlocs - we're building modern board portal software for public-facing boards, combining a board website, private workspace, and accessible document center.">
+    <meta name="keywords" content="about boardblocs, board portal company, board management team, board software developers, board portal history">
+    <meta name="author" content="BoardBlocs">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow">
+    <link rel="canonical" href="https://www.boardblocs.com/about-us.html">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.boardblocs.com/about-us.html">
+    <meta property="og:title" content="About Us – BoardBlocs | Modern Board Portal Software Team">
+    <meta property="og:description" content="Learn about BoardBlocs - we're building modern board portal software for public-facing boards, combining a board website, private workspace, and accessible document center.">
+    <meta property="og:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="BoardBlocs Board Portal Software">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="About Us – BoardBlocs | Modern Board Portal Software Team">
+    <meta name="twitter:description" content="Learn about BoardBlocs - we're building modern board portal software for public-facing boards, combining a board website, private workspace, and accessible document center.">
+    <meta name="twitter:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <meta name="twitter:image:alt" content="BoardBlocs Board Portal Software">
+    <script type="application/ld+json">
+    {"@context":"https://schema.org","@type":"WebPage","name":"About Us – BoardBlocs","description":"Learn about BoardBlocs - we're building modern board portal software for public-facing boards.","url":"https://www.boardblocs.com/about-us.html"}
+    </script>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
