--- a/accessibility.html
+++ b/accessibility.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-957201829"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-957201829');
+</script>
+
     <!-- BEGIN BOARDBLOCS FAVICONS -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -12,8 +22,29 @@
     <!-- END BOARDBLOCS FAVICONS -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Accessibility – DocMersion Compliance Suite | BoardBlocs</title>
-    <meta name="description" content="ADA-compliant documents, WCAG 2.1 alignment, screen reader support, and mobile-friendly layouts. BoardBlocs makes accessibility a priority—not an afterthought.">
+    <title>Accessibility Features – ADA Compliant Board Portal | BoardBlocs</title>
+    <meta name="description" content="BoardBlocs offers comprehensive accessibility features with ADA-compliant document conversion, screen reader support, and WCAG 2.1 AA standards for inclusive board management.">
+    <meta name="keywords" content="ADA compliant board portal, accessible board software, WCAG compliance, accessible documents, screen reader support, disability access">
+    <meta name="author" content="BoardBlocs">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow">
+    <link rel="canonical" href="https://www.boardblocs.com/accessibility.html">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.boardblocs.com/accessibility.html">
+    <meta property="og:title" content="Accessibility Features – ADA Compliant Board Portal | BoardBlocs">
+    <meta property="og:description" content="BoardBlocs offers comprehensive accessibility features with ADA-compliant document conversion, screen reader support, and WCAG 2.1 AA standards for inclusive board management.">
+    <meta property="og:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="BoardBlocs Board Portal Software">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Accessibility Features – ADA Compliant Board Portal | BoardBlocs">
+    <meta name="twitter:description" content="BoardBlocs offers comprehensive accessibility features with ADA-compliant document conversion, screen reader support, and WCAG 2.1 AA standards for inclusive board management.">
+    <meta name="twitter:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <meta name="twitter:image:alt" content="BoardBlocs Board Portal Software">
+    <script type="application/ld+json">
+    {"@context":"https://schema.org","@type":"WebPage","name":"Accessibility – BoardBlocs","description":"ADA-compliant documents, WCAG 2.1 alignment, screen reader support, and mobile-friendly layouts.","url":"https://www.boardblocs.com/accessibility.html"}
+    </script>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
