--- a/case-studies.html
+++ b/case-studies.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-957201829"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-957201829');
+</script>
+
     <!-- BEGIN BOARDBLOCS FAVICONS -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -13,6 +23,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Case Study – Contoocook Valley School District | BoardBlocs</title>
+    <meta name="description" content="See how Contoocook Valley School District transformed their board operations with BoardBlocs. Real results from real school boards.">
+    <link rel="canonical" href="https://www.boardblocs.com/case-studies.html">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://www.boardblocs.com/case-studies.html">
+    <meta property="og:title" content="Case Study – Contoocook Valley School District | BoardBlocs">
+    <meta property="og:description" content="See how Contoocook Valley School District transformed their board operations with BoardBlocs.">
+    <meta property="og:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Case Study – Contoocook Valley School District | BoardBlocs">
+    <meta name="twitter:description" content="See how Contoocook Valley School District transformed their board operations with BoardBlocs.">
+    <meta name="twitter:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <script type="application/ld+json">
+    {"@context":"https://schema.org","@type":"Article","name":"Case Study – Contoocook Valley School District","description":"See how Contoocook Valley School District transformed their board operations with BoardBlocs.","url":"https://www.boardblocs.com/case-studies.html"}
+    </script>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
