--- a/integrations.html
+++ b/integrations.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-957201829"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-957201829');
+</script>
+
     <!-- BEGIN BOARDBLOCS FAVICONS -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -12,8 +22,29 @@
     <!-- END BOARDBLOCS FAVICONS -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Integrations – Google Workspace & Microsoft 365 | BoardBlocs</title>
-    <meta name="description" content="BoardBlocs seamlessly integrates with Google Workspace, Microsoft 365, Zoom, YouTube, and more. Keep your board portal synced with the tools you already use.">
+    <title>Integrations – Connect Your Board's Tools | BoardBlocs</title>
+    <meta name="description" content="Seamlessly integrate BoardBlocs with Google Workspace, Microsoft 365, Zoom, YouTube, and other tools your board already uses.">
+    <meta name="keywords" content="board portal integrations, Google Workspace integration, Microsoft 365, Zoom integration, API integrations">
+    <meta name="author" content="BoardBlocs">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow">
+    <link rel="canonical" href="https://www.boardblocs.com/integrations.html">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.boardblocs.com/integrations.html">
+    <meta property="og:title" content="Integrations – Connect Your Board's Tools | BoardBlocs">
+    <meta property="og:description" content="Seamlessly integrate BoardBlocs with Google Workspace, Microsoft 365, Zoom, YouTube, and other tools your board already uses.">
+    <meta property="og:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="BoardBlocs Board Portal Software">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Integrations – Connect Your Board's Tools | BoardBlocs">
+    <meta name="twitter:description" content="Seamlessly integrate BoardBlocs with Google Workspace, Microsoft 365, Zoom, YouTube, and other tools your board already uses.">
+    <meta name="twitter:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <meta name="twitter:image:alt" content="BoardBlocs Board Portal Software">
+    <script type="application/ld+json">
+    {"@context":"https://schema.org","@type":"WebPage","name":"Integrations","description":"BoardBlocs seamlessly integrates with Google Workspace, Microsoft 365, Zoom, YouTube, and more.","url":"https://www.boardblocs.com/integrations.html"}
+    </script>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
