--- a/meetings-and-agenda.html
+++ b/meetings-and-agenda.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-957201829"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-957201829');
+</script>
+
     <!-- BEGIN BOARDBLOCS FAVICONS -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -12,8 +22,29 @@
     <!-- END BOARDBLOCS FAVICONS -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meetings, Events, & Agendas – Complete Meeting Lifecycle | BoardBlocs</title>
-    <meta name="description" content="Manage your entire meeting lifecycle in one place. Calendar, agendas, minutes, packets, livestreams, and public comments—all integrated.">
+    <title>Meeting & Agenda Management – Streamline Board Meetings | BoardBlocs</title>
+    <meta name="description" content="Plan, organize, and share board meetings with clear agendas, minutes, and action items. Streamline your board's meeting management workflow.">
+    <meta name="keywords" content="meeting management, agenda software, board meetings, meeting minutes, action items, agenda builder">
+    <meta name="author" content="BoardBlocs">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow">
+    <link rel="canonical" href="https://www.boardblocs.com/meetings-and-agenda.html">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.boardblocs.com/meetings-and-agenda.html">
+    <meta property="og:title" content="Meeting & Agenda Management – Streamline Board Meetings | BoardBlocs">
+    <meta property="og:description" content="Plan, organize, and share board meetings with clear agendas, minutes, and action items. Streamline your board's meeting management workflow.">
+    <meta property="og:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="BoardBlocs Board Portal Software">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Meeting & Agenda Management – Streamline Board Meetings | BoardBlocs">
+    <meta name="twitter:description" content="Plan, organize, and share board meetings with clear agendas, minutes, and action items. Streamline your board's meeting management workflow.">
+    <meta name="twitter:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <meta name="twitter:image:alt" content="BoardBlocs Board Portal Software">
+    <script type="application/ld+json">
+    {"@context":"https://schema.org","@type":"WebPage","name":"Meetings, Events, & Agendas","description":"Manage your entire meeting lifecycle in one place.","url":"https://www.boardblocs.com/meetings-and-agenda.html"}
+    </script>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
