--- a/why-board-blocs.html
+++ b/why-board-blocs.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-957201829"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-957201829');
+</script>
+
     <!-- BEGIN BOARDBLOCS FAVICONS -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -13,6 +23,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Why BoardBlocs – Modern Board Portal Software</title>
+    <meta name="description" content="Discover why organizations choose BoardBlocs for their board portal needs. One platform for public transparency, private collaboration, and accessible documents.">
+    <link rel="canonical" href="https://www.boardblocs.com/why-board-blocs.html">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.boardblocs.com/why-board-blocs.html">
+    <meta property="og:title" content="Why BoardBlocs – Modern Board Portal Software">
+    <meta property="og:description" content="Discover why organizations choose BoardBlocs for their board portal needs.">
+    <meta property="og:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Why BoardBlocs – Modern Board Portal Software">
+    <meta name="twitter:description" content="Discover why organizations choose BoardBlocs for their board portal needs.">
+    <meta name="twitter:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <script type="application/ld+json">
+    {"@context":"https://schema.org","@type":"WebPage","name":"Why BoardBlocs","description":"Discover why organizations choose BoardBlocs for their board portal needs.","url":"https://www.boardblocs.com/why-board-blocs.html"}
+    </script>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
