--- a/blog-meeting-management.html
+++ b/blog-meeting-management.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-957201829"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-957201829');
+</script>
+
     <!-- BEGIN BOARDBLOCS FAVICONS -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -13,6 +23,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Organizing Board Meetings and Agendas – BoardBlocs Blog</title>
+    <meta name="description" content="Tips for organizing effective board meetings and agendas. Streamline your meeting workflow from planning to follow-up.">
+    <link rel="canonical" href="https://www.boardblocs.com/blog-meeting-management.html">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://www.boardblocs.com/blog-meeting-management.html">
+    <meta property="og:title" content="Organizing Board Meetings and Agendas">
+    <meta property="og:description" content="Tips for organizing effective board meetings and agendas.">
+    <meta property="og:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Organizing Board Meetings and Agendas">
+    <meta name="twitter:description" content="Tips for organizing effective board meetings and agendas.">
+    <meta name="twitter:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <script type="application/ld+json">
+    {"@context":"https://schema.org","@type":"BlogPosting","headline":"Organizing Board Meetings and Agendas","description":"Tips for organizing effective board meetings and agendas.","url":"https://www.boardblocs.com/blog-meeting-management.html"}
+    </script>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
