--- a/board-news.html
+++ b/board-news.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-957201829"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-957201829');
+</script>
+
     <!-- BEGIN BOARDBLOCS FAVICONS -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -12,8 +22,29 @@
     <!-- END BOARDBLOCS FAVICONS -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Board News & Updates – Keep Stakeholders Informed | BoardBlocs</title>
-    <meta name="description" content="Share announcements, press releases, policy updates, and meeting highlights with your community. BoardBlocs makes board-level communication simple and transparent.">
+    <title>Board News & Updates – Community Communication | BoardBlocs</title>
+    <meta name="description" content="Share timely board updates, announcements, and highlights with your community. Keep stakeholders informed and engaged.">
+    <meta name="keywords" content="board news, board updates, announcements, community updates, board communication">
+    <meta name="author" content="BoardBlocs">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow">
+    <link rel="canonical" href="https://www.boardblocs.com/board-news.html">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.boardblocs.com/board-news.html">
+    <meta property="og:title" content="Board News & Updates – Community Communication | BoardBlocs">
+    <meta property="og:description" content="Share timely board updates, announcements, and highlights with your community. Keep stakeholders informed and engaged.">
+    <meta property="og:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="BoardBlocs Board Portal Software">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Board News & Updates – Community Communication | BoardBlocs">
+    <meta name="twitter:description" content="Share timely board updates, announcements, and highlights with your community. Keep stakeholders informed and engaged.">
+    <meta name="twitter:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <meta name="twitter:image:alt" content="BoardBlocs Board Portal Software">
+    <script type="application/ld+json">
+    {"@context":"https://schema.org","@type":"WebPage","name":"Board News & Updates","description":"Share announcements, press releases, policy updates, and meeting highlights with your community.","url":"https://www.boardblocs.com/board-news.html"}
+    </script>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
