--- a/contact-us.html
+++ b/contact-us.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-957201829"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-957201829');
+</script>
+
     <!-- BEGIN BOARDBLOCS FAVICONS -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -12,7 +22,29 @@
     <!-- END BOARDBLOCS FAVICONS -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Us – BoardBlocs</title>
+    <title>Contact Us – BoardBlocs | Get in Touch with Our Team</title>
+    <meta name="description" content="Contact BoardBlocs for board portal software inquiries, demos, support, or sales. We're here to help your board succeed with modern management tools.">
+    <meta name="keywords" content="contact boardblocs, board portal support, board software sales, demo request, customer service">
+    <meta name="author" content="BoardBlocs">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow">
+    <link rel="canonical" href="https://www.boardblocs.com/contact-us.html">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.boardblocs.com/contact-us.html">
+    <meta property="og:title" content="Contact Us – BoardBlocs | Get in Touch with Our Team">
+    <meta property="og:description" content="Contact BoardBlocs for board portal software inquiries, demos, support, or sales. We're here to help your board succeed with modern management tools.">
+    <meta property="og:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="BoardBlocs Board Portal Software">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Contact Us – BoardBlocs | Get in Touch with Our Team">
+    <meta name="twitter:description" content="Contact BoardBlocs for board portal software inquiries, demos, support, or sales. We're here to help your board succeed with modern management tools.">
+    <meta name="twitter:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <meta name="twitter:image:alt" content="BoardBlocs Board Portal Software">
+    <script type="application/ld+json">
+    {"@context":"https://schema.org","@type":"ContactPage","name":"Contact Us – BoardBlocs","description":"Get in touch with BoardBlocs.","url":"https://www.boardblocs.com/contact-us.html"}
+    </script>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
