--- a/discussions.html
+++ b/discussions.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-957201829"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-957201829');
+</script>
+
     <!-- BEGIN BOARDBLOCS FAVICONS -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -12,8 +22,29 @@
     <!-- END BOARDBLOCS FAVICONS -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Discussions – Avatar-Based Conversations with Sentiment Analysis | BoardBlocs</title>
-    <meta name="description" content="Facilitate secure, avatar-based board discussions with sentiment tracking. Help members express their true opinions in a safe, constructive environment.">
+    <title>Board Discussions & Communication – Secure Collaboration | BoardBlocs</title>
+    <meta name="description" content="Facilitate secure board discussions with avatar-based privacy, sentiment tracking, and organized threaded conversations. Keep board communication professional and productive.">
+    <meta name="keywords" content="board discussions, board communication, secure messaging, board collaboration, threaded discussions, sentiment analysis">
+    <meta name="author" content="BoardBlocs">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow">
+    <link rel="canonical" href="https://www.boardblocs.com/discussions.html">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.boardblocs.com/discussions.html">
+    <meta property="og:title" content="Board Discussions & Communication – Secure Collaboration | BoardBlocs">
+    <meta property="og:description" content="Facilitate secure board discussions with avatar-based privacy, sentiment tracking, and organized threaded conversations. Keep board communication professional and productive.">
+    <meta property="og:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="BoardBlocs Board Portal Software">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Board Discussions & Communication – Secure Collaboration | BoardBlocs">
+    <meta name="twitter:description" content="Facilitate secure board discussions with avatar-based privacy, sentiment tracking, and organized threaded conversations. Keep board communication professional and productive.">
+    <meta name="twitter:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <meta name="twitter:image:alt" content="BoardBlocs Board Portal Software">
+    <script type="application/ld+json">
+    {"@context":"https://schema.org","@type":"WebPage","name":"Discussions – BoardBlocs","description":"Facilitate secure, avatar-based board discussions with sentiment tracking.","url":"https://www.boardblocs.com/discussions.html"}
+    </script>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
