--- a/public-and-private-sites.html
+++ b/public-and-private-sites.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-957201829"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-957201829');
+</script>
+
     <!-- BEGIN BOARDBLOCS FAVICONS -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -12,8 +22,29 @@
     <!-- END BOARDBLOCS FAVICONS -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Public & Private Sites – Your Complete Board Portal | BoardBlocs</title>
-    <meta name="description" content="Create beautiful, ADA-compliant public board portals and secure private spaces. Share policies, meetings, agendas, and minutes with your community.">
+    <title>Public & Private Board Sites – Dual Portal Solution | BoardBlocs</title>
+    <meta name="description" content="Get both ADA-compliant public board websites and secure private workspaces for agendas, minutes, policies, and internal collaboration.">
+    <meta name="keywords" content="public board site, private workspace, dual portal, public transparency, private board portal, board website">
+    <meta name="author" content="BoardBlocs">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="googlebot" content="index, follow">
+    <link rel="canonical" href="https://www.boardblocs.com/public-and-private-sites.html">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.boardblocs.com/public-and-private-sites.html">
+    <meta property="og:title" content="Public & Private Board Sites – Dual Portal Solution | BoardBlocs">
+    <meta property="og:description" content="Get both ADA-compliant public board websites and secure private workspaces for agendas, minutes, policies, and internal collaboration.">
+    <meta property="og:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="BoardBlocs Board Portal Software">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Public & Private Board Sites – Dual Portal Solution | BoardBlocs">
+    <meta name="twitter:description" content="Get both ADA-compliant public board websites and secure private workspaces for agendas, minutes, policies, and internal collaboration.">
+    <meta name="twitter:image" content="https://www.boardblocs.com/images/boardblocs-og-image.png">
+    <meta name="twitter:image:alt" content="BoardBlocs Board Portal Software">
+    <script type="application/ld+json">
+    {"@context":"https://schema.org","@type":"WebPage","name":"Public & Private Sites","description":"Create beautiful, ADA-compliant public board portals and secure private spaces.","url":"https://www.boardblocs.com/public-and-private-sites.html"}
+    </script>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
