changed calendly temporarily

--- a/calendly-form-submission.html
+++ b/calendly-form-submission.html
@@ -22,8 +22,8 @@
     <!-- END BOARDBLOCS FAVICONS -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thank You – BoardBlocs | Form Submitted Successfully</title>
-    <meta name="description" content="Thank you for contacting BoardBlocs. We've received your submission and will be in touch soon.">
+    <title>Demo Scheduled – BoardBlocs | See You Soon!</title>
+    <meta name="description" content="Your BoardBlocs demo has been scheduled. We look forward to showing you how BoardBlocs can transform your board management.">
     <meta name="robots" content="noindex, nofollow">
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -186,13 +186,13 @@
         <!-- Thank You Message -->
         <div class="fade-in-up">
           <h1 class="text-3xl md:text-4xl font-extrabold text-slate-900 mb-4">
-            Thank You!
+            You're All Set!
           </h1>
           <p class="text-slate-700 text-lg md:text-xl mb-3">
-            Your form has been submitted successfully.
+            Your demo has been scheduled successfully.
           </p>
           <p class="text-slate-600 text-base mb-8 max-w-md mx-auto">
-            We've received your message and will be in touch soon. Keep an eye on your inbox!
+            Check your inbox for a calendar invite with all the details. We're excited to show you what BoardBlocs can do!
           </p>
 
           <!-- Return to Homepage Button -->
@@ -203,12 +203,12 @@
 
           <!-- Secondary Links -->
           <div class="mt-8 flex flex-wrap justify-center gap-4 text-sm">
-            <a href="book-demo.html" class="text-blue-600 hover:text-blue-800 hover:underline transition-colors">
-              <i class="bi bi-calendar-check mr-1"></i>Book a Demo
-            </a>
-            <span class="text-slate-300">|</span>
             <a href="why-board-blocs.html" class="text-blue-600 hover:text-blue-800 hover:underline transition-colors">
               <i class="bi bi-info-circle mr-1"></i>Why BoardBlocs
+            </a>
+            <span class="text-slate-300">|</span>
+            <a href="case-studies.html" class="text-blue-600 hover:text-blue-800 hover:underline transition-colors">
+              <i class="bi bi-file-earmark-text mr-1"></i>Case Studies
             </a>
             <span class="text-slate-300">|</span>
             <a href="blog.html" class="text-blue-600 hover:text-blue-800 hover:underline transition-colors">
@@ -265,7 +265,7 @@
   <noscript>
     <footer style="background:#f8fafc;padding:2rem;border-top:1px solid #e2e8f0;">
       <div style="max-width:1200px;margin:0 auto;">
-        <p><strong>Product:</strong> 
+        <p><strong>Product:</strong>
           <a href="public-and-private-sites.html">Public & Private Sites</a> |
           <a href="policies-&-documents.html">Policies & Documents</a> |
           <a href="meetings-and-agenda.html">Meetings & Agendas</a> |
