--- a/contact-us.html
+++ b/contact-us.html
@@ -118,6 +118,16 @@
   <body class="bg-white text-gray-900">
     <!-- Navbar will be loaded by navbarloader.js -->
     <div id="navbar-container"></div>
+  <noscript>
+    <nav style="background:#0a2239;padding:1rem;">
+      <a href="index.html" style="color:white;margin-right:1rem;">Home</a>
+      <a href="about-us.html" style="color:white;margin-right:1rem;">About</a>
+      <a href="pricing.html" style="color:white;margin-right:1rem;">Pricing</a>
+      <a href="book-demo.html" style="color:white;margin-right:1rem;">Book Demo</a>
+      <a href="contact-us.html" style="color:white;margin-right:1rem;">Contact</a>
+      <a href="blog.html" style="color:white;margin-right:1rem;">Blog</a>
+    </nav>
+  </noscript>
 
     <main class="contact-page-main bg-gradient-to-br from-blue-50 via-purple-50 to-pink-50 min-h-[60vh] pt-24 pb-6">
       <!-- Contact Hero -->
@@ -144,5 +154,45 @@
 
     <!-- Footer will be loaded by footerloader.js -->
     <script src="contactformloader.js"></script>
+  <noscript>
+    <footer style="background:#f8fafc;padding:2rem;border-top:1px solid #e2e8f0;">
+      <div style="max-width:1200px;margin:0 auto;">
+        <p><strong>Product:</strong> 
+          <a href="public-and-private-sites.html">Public & Private Sites</a> |
+          <a href="policies-&-documents.html">Policies & Documents</a> |
+          <a href="meetings-and-agenda.html">Meetings & Agendas</a> |
+          <a href="committees-&-groups.html">Committees & Groups</a> |
+          <a href="discussions.html">Discussions</a> |
+          <a href="integrations.html">Integrations</a> |
+          <a href="mobileapp.html">Mobile App</a> |
+          <a href="accessibility.html">Accessibility</a>
+        </p>
+        <p><strong>Solutions:</strong>
+          <a href="education.html">Education</a> |
+          <a href="government.html">Government</a> |
+          <a href="healthcare.html">Healthcare</a> |
+          <a href="non-profit.html">Non-Profit</a> |
+          <a href="associations.html">Associations</a> |
+          <a href="community-organizations.html">Community Organizations</a> |
+          <a href="real-estate.html">Real Estate</a> |
+          <a href="technology.html">Technology</a>
+        </p>
+        <p><strong>Resources:</strong>
+          <a href="why-board-blocs.html">Why BoardBlocs</a> |
+          <a href="case-studies.html">Case Studies</a> |
+          <a href="blog.html">Blog</a> |
+          <a href="board-governance.html">Board Governance</a> |
+          <a href="board-recruitment.html">Board Recruitment</a>
+        </p>
+        <p><strong>Company:</strong>
+          <a href="about-us.html">About Us</a> |
+          <a href="pricing.html">Pricing</a> |
+          <a href="contact-us.html">Contact</a> |
+          <a href="book-demo.html">Book Demo</a> |
+          <a href="privacy-policy.html">Privacy Policy</a>
+        </p>
+      </div>
+    </footer>
+  </noscript>
   </body>
 </html>
