--- a/book-demo.html
+++ b/book-demo.html
@@ -74,6 +74,16 @@
   <body class="bg-white text-gray-900">
     <!-- Navbar will be loaded by navbarloader.js -->
     <div id="navbar-container"></div>
+  <noscript>
+    <nav style="background:#0a2239;padding:1rem;">
+      <a href="index.html" style="color:white;margin-right:1rem;">Home</a>
+      <a href="about-us.html" style="color:white;margin-right:1rem;">About</a>
+      <a href="pricing.html" style="color:white;margin-right:1rem;">Pricing</a>
+      <a href="book-demo.html" style="color:white;margin-right:1rem;">Book Demo</a>
+      <a href="contact-us.html" style="color:white;margin-right:1rem;">Contact</a>
+      <a href="blog.html" style="color:white;margin-right:1rem;">Blog</a>
+    </nav>
+  </noscript>
 
     <!-- Calendly Section -->
     <main class="pt-32 pb-20 min-h-[60vh] bg-gradient-to-br from-blue-50 via-purple-50 to-pink-50">
@@ -84,7 +94,7 @@
         <!-- Demo Container -->
         <div>
           <!-- Calendly inline widget begin -->
-          <div class="calendly-inline-widget" data-url="https://calendly.com/mark-100/45min" style="min-width:100%;width:100%;height:1200px;"></div>
+          <div class="calendly-inline-widget" data-url="https://calendly.com/corban-leadsprinter/boardblocs-meeting" style="min-width:320px;height:700px;"></div>
           <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
           <!-- Calendly inline widget end -->
         </div>
