--- a/calendly-form-submission.html
+++ b/calendly-form-submission.html
@@ -11,6 +11,15 @@
   gtag('config', 'AW-957201829');
 </script>
 
+<!-- Event snippet for Lead - Demo [Calendly Form Submitted] (Code) conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-957201829/nA15CPSOlO0bEKX7tsgD',
+      'value': 1.0,
+      'currency': 'USD'
+  });
+</script>
+
     <!-- BEGIN BOARDBLOCS FAVICONS -->
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
